--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,46 @@
-body {
-  font-family: sans-serif;
+:root {
+  --branding-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+  --secondry-color: #f9f7fe;
 }
-h1 {
+body {
+  font-family: var(--default-font-family);
+}
+h1 h2 h3 h4 h5 h6 {
   color: black;
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font-family);
   font-weight: bold;
 }
+h1 {
+  font-size: 96px;
+}
 p {
+  font-family: var(--default-font-family);
+  font-weight: normal;
+}
+.hero {
+  background: var(--secondry-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero p {
+  font-family: "Playfair Display", serif;
+  font-size: 36px;
+  margin: 0;
+  color: #272142;
+}
+.hero h2 {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+}
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  line-height: 27px;
+  font-size: 18px;
+  padding: 15px 30px;
 }
