--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,20 @@ p {
 .project-description {
   padding: 120px 60px;
 }
+.about-section {
+  padding: 160px 20px;
+}
+.about-section-content {
+  margin: 30px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
 @media (max-width: 900px) {
   .project-description {
     padding: 0;
@@ -68,11 +82,16 @@ p {
   }
   h1 {
     font-size: 44px;
+    line-height: 56px;
   }
   h2 {
     font-size: 44px;
   }
   .hero {
     padding: 80px 20px;
+  }
+  .about-section {
+    padding: 0;
+    text-align: center;
   }
 }
